fix: updated the dashboard page to align the piechart to show the employee count

--- a/src/components/InnerContainer/InnerContainer.module.css
+++ b/src/components/InnerContainer/InnerContainer.module.css
@@ -13,3 +13,14 @@
   display: flex;
   height: 17rem;
 }
+
+.du_stats {
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 17px;
+    font-size: 13px;
+    font-weight: 500;
+    margin-left: 30px;
+    width: 63%;
+    margin-bottom: 5px;
+}
