--- a/src/components/TransferCountsDisplay/TransferCountsDisplay.module.css
+++ b/src/components/TransferCountsDisplay/TransferCountsDisplay.module.css
@@ -2,5 +2,5 @@
     display: flex;
     flex-wrap: wrap;
     width: 63%;
-    padding: 20px;
+    padding: 0 20px;
 }
